<resources>
    <string name="app_name">Uts_Pemrograman_Mobile</string>
    <string name="judul3">Goa Seplawan</string>
    <string name="isi3">Goa Seplawan adalah wisata alam gua yang terletak di Desa Donorejo, Kecamatan Kaligesing, Kulon Progo, Yogyakarta. Gua Seplawan memiliki panjang bentangan 700 meter dengan cabang-cabang gua sepanjang 150 meter sampai 300 meter dan diameter dari gua ini 15 meter. </string>
    <string name="nama">Nama : Dimas Andhika</string>
    <string name="nim">Nim : 3420170002</string>
    <string name="Judul7">Program Menghitung Persegi</string>
    <string name="j_panjang">Masukkan Panjang</string>
    <string name="J_lebar">Masukkan Lebar</string>
    <string name="pass">Masukkan Password</string>
    <string name="band">Band Favorite</string>
    <string name="makanan">Makanan Favorite</string>
    <string name="cb1">Muse</string>
    <string name="cb2">Tokyo Jihen</string>
    <string name="cb3">Nirvana</string>
    <string name="rb1">Nasi Goreng</string>
    <string name="rb2">Sayur Capcay</string>
    <string name="rb3">Kentang Rebus</string>
    <string name="judul_tugas2">Sejarah Danboo</string>
    <string name="isi_tugas2">DANBO adalah kependekan dari Danboard,
        Danbo sebenarnya diambil dari bahasa jepang “danboru”, yang berarti kardus.
        Danboard atau sering disebut Danbo adalah sebuah tokoh fiksi dari sebuah manga yang berjudul Yotsuba!
        (dibacanya yotsubato!) yang dikarang oleh Azuma Kiyohiko.</string>
    <string name="judul_tugas3">Gunung Kelud</string>
    <string name="isi_tugas3">Gunung Kelud,
        dalam aksara jawa(sering disalah tuliskan menjadi Kelut dalam bahasa Jawa; dalam bahasa Belanda disebut Klut, Cloot, Kloet, atau Kloete)
        adalah sebuah gunung berapi di Provinsi Jawa Timur, Indonesia, yang tergolong aktif.
        Gunung ini berada di perbatasan antara Kabupaten Kediri, Kabupaten Blitar, dan Kabupaten Malang,
        kira-kira 35 km sebelah timur pusat Kota Kediri dan 25 km sebelah utara pusat Kota Blitar </string>


    <string name="bintang">
        Bintang 5: Sangat setuju \n
        Bintang 4: Setuju \n
        Bintang 3: Kurang setuju \n
        Bintang 2: Tidak setuju \n
        Bintang 1: Sangat tidak setuju
    </string>
    <string name="konfirmasi">Yakin mau keluar dari sistem?</string>
</resources>