<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Latihan_8">

    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="47dp"
        android:background="#FFFFFF"
        android:text="@string/nama"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <CheckBox
        android:id="@+id/Cb1"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:text="@string/cb1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/jd_band" />

    <CheckBox
        android:id="@+id/Cb2"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:text="@string/cb2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Cb1" />

    <CheckBox
        android:id="@+id/Cb3"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="4dp"
        android:background="#FFFFFF"
        android:text="@string/cb3"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Cb2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="142dp"
        android:layout_height="21dp"
        android:layout_marginStart="32dp"
        android:background="#FFFFFF"
        android:text="@string/nim"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toBottomOf="@+id/nama" />

    <TextView
        android:id="@+id/jd_band"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:background="#F44336"
        android:text="@string/band"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jd_makanan"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:background="#F44336"
        android:text="@string/makanan"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Cb3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="260dp"
        android:layout_height="150dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/jd_makanan">

        <RadioButton
            android:id="@+id/Rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/Rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/rb2" />

        <RadioButton
            android:id="@+id/Rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/rb3" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:backgroundTint="#2196F3"
        android:text="SUBMIT"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="47dp"
        android:src="@drawable/dedi"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>