<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#423955"
    tools:context=".Latihan_7">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TextView
        android:id="@+id/judul7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Judul7"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/j_panjang"
        android:layout_width="300dp"
        android:layout_height="18dp"
        android:layout_marginTop="31dp"
        android:text="@string/j_panjang"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul7" />

    <EditText
        android:id="@+id/panjang"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/j_panjang" />

    <TextView
        android:id="@+id/j_lebar"
        android:layout_width="300dp"
        android:layout_height="18dp"
        android:text="@string/J_lebar"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/panjang" />

    <EditText
        android:id="@+id/lebar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/j_lebar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="18dp"
        android:text="@string/pass"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/lebar" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="#00BCD4"
        android:text="HITUNG"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/dimas"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:background="#FFFFFF"
        android:text="@string/nama"
        android:textColor="#DA2222"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:background="#FFFFFF"
        android:text="@string/nim"
        android:textColor="#9F2218"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nama" />
</androidx.constraintlayout.widget.ConstraintLayout>